@@ -246,6 +246,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
   groups if a user doesn't have explicit groups
 * (bug 27670) Ordering by timestamp (and usage of start and end) isn't as clear
   in auto generated document, as it is on mw.org
+* (bug 27182) API: Add filter by prefix for meta=allmessages
 
 
 === Languages updated in 1.18 ===
